--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <li><span><a href="https://www.bambouwentechniek.nl/contact/regio-noord"
                                             target="blank">BAM Construction and Engineering - Northern Region</a></span>
                                 </li>
-                                <li><span><a href="https://github.com/allanzico/StendenWeatherStation"
+                                <li><span><a href="http://www.iotnederland.nl/"
                                             target="blank">IOT Nederland</a></span></li>
                                 <li><span><a href="https://www.corlido.nl/" target="blank">CORLIDO GROUP</a></span></li>
                             </ul>
