--- a/index.html
+++ b/index.html
@@ -139,19 +139,23 @@
                     <div class="projects">
                         <h4>PHP</h4>
 
-                        <p><span><a href="https://github.com/allanzico/capital-link-old" target="blank">Savings group
-                                    admin portal</a></span> built with functional PHP programming
+                        <p><span><a href="https://github.com/allanzico/savings-club" target="blank">Savings group
+                                    admin portal</a></span> built with precedural PHP programing
 
                         </p>
                         <p><span><a href="https://github.com/allanzico/capital-link-old" target="blank">Savings group
                                     admin portal</a></span>
-                            built with Laravel
+                            re-built with Laravel
                         </p>
+                        <h4>Fullstack</h4>
+                        <p><span><a href="https://github.com/allanzico/Personal-Ledger" target="blank">Simple Personal Ledger</a></span> built using React's Context API and Symfony powering the backend
+                         </p>
                         <h4>ReactJs</h4>
-                        <p><span><a href="https://github.com/allanzico/capital-link-old" target="blank">E-Commerce
+                        <p><span><a href="https://github.com/allanzico/akatale" target="blank">E-Commerce
                                     website</a></span> with STRIPE and Firebase.
 
                         </p>
+                  
                         <p>Consuming a football prediction API by building a <span><a
                                     href="https://github.com/allanzico/prediction-API" target="blank">Prediction
                                     Tips Webpage</a></span>
@@ -161,12 +165,12 @@
                                     Tracker</a></span>
                         </p>
                         <p>Learning React with Redux by building <span><a
-                                    href="https://github.com/allanzico/capital-link-old" target="blank">a CRUD
+                                    href="https://github.com/allanzico/the-classifieds" target="blank">a CRUD
                                     application</a></span> with firabase auth and firestore
 
                         </p>
                         <h4>Flutter</h4>
-                        <p><span><a href="https://github.com/allanzico/capital-link-old" target="blank">Food delivery
+                        <p><span><a href="https://github.com/allanzico/Food-Ordering-App" target="blank">Food delivery
                                     App</a></span> built by following multiple tutorials online
 
                         </p>
